@@ -1,3 +1,9 @@
+2006-10-10  Benjamin Berg  <benjamin@sipsolutions.net>
+
+	* engines/support/cairo-support.c: (ge_cairo_simple_border):
+	- The fills overlapped if the two colors are the same causing edge
+	  pixels not to be painted. Fixed with a special case.
+
 2006-10-09  Thomas Wood  <thos@gnome.org>
 
 	* engines/mist/src/mist-style.c: (mist_style_draw_handle): Don't draw
